--- a/Sheaft.Web.Portal/index.html
+++ b/Sheaft.Web.Portal/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://unpkg.com/undraw-js@1.0.0/index.js">
+    </script>
+    <script>
+  
+      const options = {
+        defaultColor: "#7c3aff"
+      };
+  
+      UndrawJS.init(options);
+    </script>
   </body>
 </html>
